Fix Uikit installation(icons now working). Style show-more button. Add back to top button. Better covers.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 // Background - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 html {
     background-color: #E9E7E7;
+
     // background-image: url("https://mdn.mozillademos.org/files/6457/mdn_logo_only_color.png");
     // background: url("ignasi_pattern_s.png");
 }
@@ -35,14 +36,72 @@ html {
 
 .uk-search-input:hover, :focus {
     box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
-  }
+}
 
 // Search Results (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - //
-div#search-results {
+#search-results {
     margin-top: 80px;
 }
 
+// Scroll Up Button (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - //
+.scroll-up {
+    position: fixed;
+    bottom: 9%;
+    right: 2%;
+    z-index: 3;
+}
+
+.scroll-up-button {
+    box-shadow: 0px 0px 0px 0px transparent;
+    background: transparent;
+    border: 0px;
+    transition-duration: 0.2s;
+}
+
+.scroll-up-button:hover {
+    box-shadow: 0px 0px 0px 0px transparent;
+    filter: drop-shadow(0px 2px 3px #ACACAC);
+    background: transparent;
+    border: 0px;
+    color: inherit;
+}
+
+.scroll-up-button:active {
+    box-shadow: 0px 0px 0px 0px transparent;
+    background: transparent;
+    border: 0px;
+    transform: scaleY(1.5);
+
+}
+
+// Show More Button (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - //
+#show-more {
+    text-align: center;
+}
+.show-more-button {
+    background: white;
+    border: 0px;
+    border-radius: 50px;
+    text-transform: capitalize;
+}
+
+.show-more-button:hover {
+    box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6);
+    border: 0px;
+    background-color: white;
+}
+
+.show-more-button:active {
+    background-color: white;
+    border: 0px;
+    box-shadow: inset 0px 0px 11px 0px rgba(158, 158, 158, 0.6);
+}
+
 // Cover View (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - - - - //
+.cover-view {
+    margin-bottom: 0px;
+}
+
 .game-space {
     padding-bottom: 30px !important;
 }
@@ -63,10 +122,28 @@ div#search-results {
 .game-cover {
     margin-bottom: 0px !important;
     border-radius: 3px;
-    box-shadow: -2px 4px 9px 1px #9e9e9e !important;
-    outline: 1px solid #ffffff3d;
-    outline-offset: -1px;
-    outline-style: outset;
+    box-shadow: -2px 4px 9px 1px #9e9e9e;
+}
+
+.game-cover-effect {
+    position: relative;
+    transition-duration: 0.3s;
+}
+
+.game-cover-effect:hover {
+  transform: rotate(10deg);
+  // cursor: pointer; // might be not needed
+}
+
+.game-cover-effect::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 90px;
+    border-radius: 3px;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to left top, rgba(75, 235, 236, 0) 50%, rgba(255, 255, 255, 0.15) 80%, rgba(255, 255, 255, 0.28) 100%);
 }
 
 .no-cover {
@@ -79,6 +156,11 @@ div#search-results {
     outline-style: outset;
     background-color: transparent;
     box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6), inset 0px 0px 120px rgba(158, 158, 158, 0.6);
+    transition-duration: 0.3s;
+}
+
+.no-cover:hover {
+  transform: rotate(10deg);
 }
 
 .no-cover-tag {
